Fixed header spacing when resizing window

--- a/main.css
+++ b/main.css
@@ -26,16 +26,18 @@ footer {
 }
 
 #header-left {
-    display: inline-flex;
-    width: 20%;
-    justify-content: flex-start;
+    position: fixed;
+    top: 21px;
+    left: 17px;
+    display: flex;
     align-items: center;
 }
 
 #header-right {
-    display: inline-flex;
-    width: 70%;
-    justify-content: flex-end;
+    position: fixed;
+    top: 13px;
+    right: 30px;
+    display: flex;
     align-items: center;
 }
 
@@ -51,7 +53,7 @@ footer {
     background-size: 32px 32px;
     width: 25px;
     opacity: 80%;
-    padding-right: 5px
+    padding-right: 8px
 }
 
 #app-launcher-image:hover {
